[package]
name = "lock-free-data-structures"
version = "0.1.0"
authors = ["Neil Allavarpu"]
edition = "2021"
description = "Lock free implementations of various data structures"
readme = "README.md"
repository = "https://github.com/NeilAllavarpu/lock-free-data-structures"
keywords = ["lock-free"]
categories = ["data-structures"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
style = "warn"
pedantic = "warn"
restriction = "warn"
cargo = "warn"

blanket_clippy_restriction_lints = "allow"